#820 - better translation names for letters B and C, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -153,9 +153,9 @@ black_list.description=Fügt die Datei, bzw. Namensmuster zur Ausschlussliste hin
 black_list.key=A
 black_list.name=Datei ausschließen
 
-buypro.description=PowerFolder Pro jetzt kaufen
-buypro.key=K
-buypro.name=Pro kaufen
+buy_pro.description=PowerFolder Pro jetzt kaufen
+buy_pro.key=K
+buy_pro.name=Pro kaufen
 
 change.friend.personal.message.text=Schicken Sie {0} eine pers\u00f6nliche Nachricht
 change.friend.personal.message.title=Nachricht f\u00fcr einen Freund
@@ -164,20 +164,20 @@ chat.notification.member_message=Sie haben eine Nachricht von {0} erhalten.
 chat.notification.message=Sie haben eine Nachricht erhalten
 chat.notification.title=Nachricht erhalten
 
-chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
-chatpanel.chat_with=Chat mit
-chatpanel.member_connected_at_time={0} verbunden um {1}
-chatpanel.member_disconnected_at_time={0} getrennt um {1}
-chatpanel.member_joined_folder_at_time={0} ist dem Folder um {1} beigetreten
-chatpanel.member_left_folder_at_time={0} hat den Folder um {1} verlassen
+chat_panel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
+chat_panel.chat_with=Chat mit
+chat_panel.member_connected_at_time={0} verbunden um {1}
+chat_panel.member_disconnected_at_time={0} getrennt um {1}
+chat_panel.member_joined_folder_at_time={0} ist dem Folder um {1} beigetreten
+chat_panel.member_left_folder_at_time={0} hat den Folder um {1} verlassen
 
 clear_completed_uploads.description=Entfernt die fertiggestellten Uploads aus der Ansicht (Alt-3)
 clear_completed_uploads.key=A
 clear_completed_uploads.name=Aufr\u00e4umen
 
-clearcompleteddownloads.description=Entfernt die fertiggestellten Downloads aus der Ansicht (Alt-3)
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=Aufr\u00e4umen
+clear_completed_downloads.description=Entfernt die fertiggestellten Downloads aus der Ansicht (Alt-3)
+clear_completed_downloads.key=c
+clear_completed_downloads.name=Aufr\u00e4umen
 
 connect.description=Manuelle Verbindung zu einem PowerFolder Benutzer
 connect.dialog.text=Bitte geben Sie den Namen des Hosts oder die IP Adresse des Benutzers an, mit dem Sie verbunden werden m\u00f6chten.\n\nPowerFolder verbindet sich nach kurzer Zeit automatisch mit dem Netzwerk,\nbenutzen Sie diese Option wenn Sie sich manuell verbinden wollen.\n
@@ -185,11 +185,11 @@ connect.dialog.title=Manuelle Verbindung zu einem PowerFolder Benutzer
 connect.key=c
 connect.name=Verbinden
 
-console.updatecheck.new_developmentversion=------------ Neue enwicklungs version heruntergeladen ------------
+console.update_check.new_development_version=------------ Neue enwicklungs version heruntergeladen ------------
 
-createshortcut.description=Erstellt eine Desktop Verkn\u00fcfung zu diesem PowerFolder
-createshortcut.key=C
-createshortcut.name=Desktop-Verkn\u00fcfpung erstellen
+create_shortcut.description=Erstellt eine Desktop Verkn\u00fcfung zu diesem PowerFolder
+create_shortcut.key=C
+create_shortcut.name=Desktop-Verkn\u00fcfpung erstellen
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=dd.MM.yyyy HH\:mm
@@ -551,7 +551,7 @@ folderrepository.preview_folder.title=Folder Vorschau
 folderrepository.warnonclose.text=Diese Folder sind noch nicht vollst\u00e4ndig synchronisiert\:\n\n\n\n{0}\n\n\nTrozdem Beenden?
 folderrepository.warnonclose.title=Wirklich Beenden?
 
-freelimitdialog.buypro=PowerFolder Pro kaufen
+freelimitdialog.buy_pro=PowerFolder Pro kaufen
 freelimitdialog.buyrecommendation=Es ist notwendig auf PowerFolder Pro umzusteigen oder die Nutzung zu verringern.
 freelimitdialog.buyrecommendation2=PowerFolder ist solange deaktiviert.
 freelimitdialog.buyrecommendation3=Helfen Sie uns durch den Kauf von PowerFolder Pro\!
