--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -84,9 +84,9 @@ black_list.description=A\u00F1oade una definici\u00F3n de archivo en los patrone
 black_list.key=I
 black_list.name=A\u00F1oadir a los patrones de omisi\u00F3n
 
-buypro.description=Moderniza a PowerFolder Pro now
-buypro.key=B
-buypro.name=Adquiere Pro
+buy_pro.description=Moderniza a PowerFolder Pro now
+buy_pro.key=B
+buy_pro.name=Adquiere Pro
 
 change.friend.personal.message.text=Puedes incluir un mensaje perosnal para {0}
 change.friend.personal.message.title=A\u00F1adir mensaje para amigo
@@ -95,20 +95,20 @@ chat.notification.member_message=Acabas de recibir un mensaje charla de {0}
 chat.notification.message=Haz recibido un mensaje de charla
 chat.notification.title=Mensaje de Charla Recibido
 
-chatpanel.cannot_deliver=el mensaje no se pudo entregar porque '{0}' no est\u00E1 conectado
-chatpanel.chat_with=Charlar con
-chatpanel.member_connected_at_time={0} conectado a las {1}
-chatpanel.member_disconnected_at_time={0} desconectado a las {1}
-chatpanel.member_joined_folder_at_time={0} se uni\u00F3 a la carpeta a las {1}
-chatpanel.member_left_folder_at_time={0} abandon\u00F3 la carpeta a las {1}
+chat_panel.cannot_deliver=el mensaje no se pudo entregar porque '{0}' no est\u00E1 conectado
+chat_panel.chat_with=Charlar con
+chat_panel.member_connected_at_time={0} conectado a las {1}
+chat_panel.member_disconnected_at_time={0} desconectado a las {1}
+chat_panel.member_joined_folder_at_time={0} se uni\u00F3 a la carpeta a las {1}
+chat_panel.member_left_folder_at_time={0} abandon\u00F3 la carpeta a las {1}
 
 clear_completed_uploads.description=Limpiar la lista de cargas completas recientes (Alt-3)
 clear_completed_uploads.key=c
 clear_completed_uploads.name=Limpiar
 
-clearcompleteddownloads.description=Borrar lista de descargas completas recientes(Alt-3)
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=Limpiar
+clear_completed_downloads.description=Borrar lista de descargas completas recientes(Alt-3)
+clear_completed_downloads.key=c
+clear_completed_downloads.name=Limpiar
 
 connect.description=Conexi\u00F3n manual a un usuario de PowerFolder
 connect.dialog.text=Por favor teclee el nombre de servidor o la IP del usuario al que se quiere conectar.\n\nPowerFolder se conecta autom\u00E1ticamente a la red despu\u00E9s de un corto per\u00EDodo de tiempo,\nuse esta opci\u00F3n si quiere conectarse manualmente a un usuario.\n
@@ -116,11 +116,11 @@ connect.dialog.title=Conexi\u00F3n manual a un usuario de PowerFolder
 connect.key=c
 connect.name=Conectar
 
-console.updatecheck.new_developmentversion=------------ Nueva versi\u00F3n en desarrollo descargada ------------
+console.update_check.new_development_version=------------ Nueva versi\u00F3n en desarrollo descargada ------------
 
-createshortcut.description=Crea un acceso directo de este PowerFolder en tu escritorio
-createshortcut.key=C
-createshortcut.name=Crear acceso directo en el escritorio
+create_shortcut.description=Crea un acceso directo de este PowerFolder en tu escritorio
+create_shortcut.key=C
+create_shortcut.name=Crear acceso directo en el escritorio
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/dd/yyyy HH\:mm
@@ -481,7 +481,7 @@ folderrepository.preview_folder.title=Carpeta de previsualizaci\u00FAn
 folderrepository.warnonclose.text=Estas carpetas no se sincronizaron a\u00FAn\:\n\n\n\n{0}\n\n\nContinuar con Salir?
 folderrepository.warnonclose.title=Continuar con Salir?
 
-freelimitdialog.buypro=Adquirir PowerFolder Pro
+freelimitdialog.buy_pro=Adquirir PowerFolder Pro
 freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
 freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
