--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -84,9 +84,9 @@ black_list.description=Ajouter un fichier dans la black list
 black_list.key=I
 black_list.name=Ajouter dans la black list
 
-buypro.description=D\u00E9couvrir PowerFolder Pro maintenant
-buypro.key=B
-buypro.name=Version Pro
+buy_pro.description=D\u00E9couvrir PowerFolder Pro maintenant
+buy_pro.key=B
+buy_pro.name=Version Pro
 
 change.friend.personal.message.text=Inclure un message personnel pour {0}
 change.friend.personal.message.title=Ajouter un message personnel
@@ -95,20 +95,20 @@ chat.notification.member_message=Vous avez recu un message de {0}.
 chat.notification.message=Vous avez recu un message.
 chat.notification.title=Message recu
 
-chatpanel.cannot_deliver=Le message ne peut pas \u00EAtre d\u00E9livr\u00E9 car '{0}' n'est pas connect\u00E9
-chatpanel.chat_with=Discuter avec
-chatpanel.member_connected_at_time={0} connect\u00E9 \u00E0 {1}
-chatpanel.member_disconnected_at_time={0} d\u00E9connect\u00E9 \u00E0 {1}
-chatpanel.member_joined_folder_at_time={0} a rejoints le dossier \u00E0 {1}
-chatpanel.member_left_folder_at_time={0} a quitt\u00E9 le dossier \u00E0 {1}
+chat_panel.cannot_deliver=Le message ne peut pas \u00EAtre d\u00E9livr\u00E9 car '{0}' n'est pas connect\u00E9
+chat_panel.chat_with=Discuter avec
+chat_panel.member_connected_at_time={0} connect\u00E9 \u00E0 {1}
+chat_panel.member_disconnected_at_time={0} d\u00E9connect\u00E9 \u00E0 {1}
+chat_panel.member_joined_folder_at_time={0} a rejoints le dossier \u00E0 {1}
+chat_panel.member_left_folder_at_time={0} a quitt\u00E9 le dossier \u00E0 {1}
 
 clear_completed_uploads.description=Nettoyer la liste des fichiers r\u00E9cents envoy\u00E9s (Alt-3)
 clear_completed_uploads.key=n
 clear_completed_uploads.name=Nettoyer
 
-clearcompleteddownloads.description=Efface la liste des t\u00E9l\u00E9chargements r\u00E9cents (Alt-3)
-clearcompleteddownloads.key=N
-clearcompleteddownloads.name=Nettoyage
+clear_completed_downloads.description=Efface la liste des t\u00E9l\u00E9chargements r\u00E9cents (Alt-3)
+clear_completed_downloads.key=N
+clear_completed_downloads.name=Nettoyage
 
 connect.description=Se connecter \u00E0 un utilisateur de PowerFolder
 connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00E9seau apr\u00E8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00E0 un autre utilisateur.\n
@@ -116,11 +116,11 @@ connect.dialog.title=Se connecter \u00E0 un utilisateur de PowerFolder
 connect.key=C
 connect.name=Connexion
 
-console.updatecheck.new_developmentversion=------------ Nouvelle version de d\u00E9veloppement t\u00E9l\u00E9charg\u00E9e ------------
+console.update_check.new_development_version=------------ Nouvelle version de d\u00E9veloppement t\u00E9l\u00E9charg\u00E9e ------------
 
-createshortcut.description=Cr\u00E9er un raccourci sur votre bureau
-createshortcut.key=C
-createshortcut.name=Cr\u00E9er un raccourci bureau
+create_shortcut.description=Cr\u00E9er un raccourci sur votre bureau
+create_shortcut.key=C
+create_shortcut.name=Cr\u00E9er un raccourci bureau
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/jj/aaaa HH\:mm
@@ -484,7 +484,7 @@ folderrepository.preview_folder.title=Pr\u00E9visualiser le dossier
 folderrepository.warnonclose.text=Ces dossiers ne sont pas encore synchronis\u00E9s\:\n\n\n\n{0}\n\n\nContinuer Sortir?
 folderrepository.warnonclose.title=Confirmer la sortie ?
 
-freelimitdialog.buypro=D\u00E9couvrez PowerFolder Pro
+freelimitdialog.buy_pro=D\u00E9couvrez PowerFolder Pro
 freelimitdialog.buyrecommendation=Il est n\u00E9cessaire de passer \u00E0 la version Pro ou de reduire votre utilisation.
 freelimitdialog.buyrecommendation2=PowerFolder est d\u00E9sactiv\u00E9 jusqu'\u00E0 votre mise \u00E0 jour.
 freelimitdialog.buyrecommendation3=Supportez-nous en d\u00E9couvrant PowerFolder Pro\!
