--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -84,9 +84,9 @@ black_list.description=Aggiunge una definizione di file ai percorsi da ignorare
 black_list.key=I
 black_list.name=Aggiungi ai percorsi da ignorare
 
-buypro.description=Aggiorna a PowerFolder Pro ora
-buypro.key=B
-buypro.name=Acquista Pro
+buy_pro.description=Aggiorna a PowerFolder Pro ora
+buy_pro.key=B
+buy_pro.name=Acquista Pro
 
 change.friend.personal.message.text=E' possibile includere un messaggio personale per {0}
 change.friend.personal.message.title=Aggiungi messaggio per l'amico
@@ -95,20 +95,20 @@ chat.notification.member_message=Hai ricevuto un messaggio di chat da {0}.
 chat.notification.message=Hai ricevuto un messaggio di chat .
 chat.notification.title=Ricevuto un Messaggio Chat 
 
-chatpanel.cannot_deliver=il messaggio non pu\u00F2 essere consegnato perch\u00E8 '{0}' non \u00E8 connesso
-chatpanel.chat_with=Chat con
-chatpanel.member_connected_at_time={0} connesso a {1}
-chatpanel.member_disconnected_at_time={0} disconnesso da {1}
-chatpanel.member_joined_folder_at_time={0} entrato nella cartella a {1}
-chatpanel.member_left_folder_at_time={0} lasciato la cartella a {1}
+chat_panel.cannot_deliver=il messaggio non pu\u00F2 essere consegnato perch\u00E8 '{0}' non \u00E8 connesso
+chat_panel.chat_with=Chat con
+chat_panel.member_connected_at_time={0} connesso a {1}
+chat_panel.member_disconnected_at_time={0} disconnesso da {1}
+chat_panel.member_joined_folder_at_time={0} entrato nella cartella a {1}
+chat_panel.member_left_folder_at_time={0} lasciato la cartella a {1}
 
 clear_completed_uploads.description=Cancella la lista deglu upload recentemente completati (Alt-3)
 clear_completed_uploads.key=c
 clear_completed_uploads.name=Cancella
 
-clearcompleteddownloads.description=Cancella la lista dei download appena completati(Alt-3)
-clearcompleteddownloads.key=P
-clearcompleteddownloads.name=Pulisci
+clear_completed_downloads.description=Cancella la lista dei download appena completati(Alt-3)
+clear_completed_downloads.key=P
+clear_completed_downloads.name=Pulisci
 
 connect.description=Connessione manuale ad un utente PowerFolder
 connect.dialog.text=Inserisci un hostname o l'ip dell'utente con cui vuoi connetterti.\n\nPowerFolder automaticamente si connetter\u00E0 alla rete dopo poco tempo,\nusa questa opzione se vuoi connetterti manualmente ad un utente.\n
@@ -116,11 +116,11 @@ connect.dialog.title=Connessione manuale ad un utente PowerFolder
 connect.key=c
 connect.name=Connesso
 
-console.updatecheck.new_developmentversion=------------ Scaricata nuova versione sviluppo------------
+console.update_check.new_development_version=------------ Scaricata nuova versione sviluppo------------
 
-createshortcut.description=Crea un collegamento a questo PowerFolder sul tuo desktop
-createshortcut.key=C
-createshortcut.name=Crea un collegamento sul desktop
+create_shortcut.description=Crea un collegamento a questo PowerFolder sul tuo desktop
+create_shortcut.key=C
+create_shortcut.name=Crea un collegamento sul desktop
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/dd/yyyy HH\:mm
@@ -482,7 +482,7 @@ folderrepository.preview_folder.title=Cartella Anteprima
 folderrepository.warnonclose.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}\n\n\nContinua Esci?
 folderrepository.warnonclose.title=Continua Esci?
 
-freelimitdialog.buypro=Acquista PowerFolder Pro
+freelimitdialog.buy_pro=Acquista PowerFolder Pro
 freelimitdialog.buyrecommendation=E' necessario aggiornare alla Versione Pro oppure ridurre l'utilizzo.
 freelimitdialog.buyrecommendation2=PowerFolder \u00E8 attualmente disabilitato finch\u00E9 non si esegue un'azione.
 freelimitdialog.buyrecommendation3=Supportaci acquistando PowerFolder Pro\!
