--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -84,9 +84,9 @@ black_list.description=\u7121\u8996\u30D1\u30BF\u30FC\u30F3\u306B\u30D5\u30A1\u3
 black_list.key=I
 black_list.name=\u7121\u8996\u30D1\u30BF\u30FC\u30F3\u306B\u8FFD\u52A0(I)
 
-buypro.description=\u4ECA\u3059\u3050 PowerFolder Pro \u306B\u30A2\u30C3\u30D7\u30B0\u30EC\u30FC\u30C9
-buypro.key=B
-buypro.name=Pro \u7248\u3092\u8CFC\u5165(B)
+buy_pro.description=\u4ECA\u3059\u3050 PowerFolder Pro \u306B\u30A2\u30C3\u30D7\u30B0\u30EC\u30FC\u30C9
+buy_pro.key=B
+buy_pro.name=Pro \u7248\u3092\u8CFC\u5165(B)
 
 change.friend.personal.message.text={0}\u3055\u3093\u3078\u306E\u500B\u4EBA\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u542B\u307E\u305B\u308B\u3053\u3068\u304C\u53EF\u80FD\u3067\u3059
 change.friend.personal.message.title=\u53CB\u4EBA\u5B9B\u3066\u30E1\u30C3\u30BB\u30FC\u30B8\u306E\u8FFD\u52A0
@@ -95,20 +95,20 @@ chat.notification.member_message={0} \u3055\u3093\u304B\u3089\u30C1\u30E3\u30C3\
 chat.notification.message=\u30C1\u30E3\u30C3\u30C8\u30E1\u30C3\u30BB\u30FC\u30B8\u3092\u53D7\u3051\u53D6\u308A\u307E\u3057\u305F\u3002
 chat.notification.title=\u30C1\u30E3\u30C3\u30C8\u30E1\u30C3\u30BB\u30FC\u30B8\u7740\u4FE1
 
-chatpanel.cannot_deliver='{0}' \u3055\u3093\u3068\u63A5\u7D9A\u3055\u308C\u3066\u3044\u306A\u3044\u305F\u3081\u3001\u30E1\u30C3\u30BB\u30FC\u30B8\u9001\u9054\u4E0D\u53EF
-chatpanel.chat_with=\u30C1\u30E3\u30C3\u30C8\u76F8\u624B\:
-chatpanel.member_connected_at_time={1} {0} \u3055\u3093\u306F\u63A5\u7D9A
-chatpanel.member_disconnected_at_time={1} {0} \u3055\u3093\u306F\u5207\u65AD
-chatpanel.member_joined_folder_at_time={1} {0} \u3055\u3093\u304C\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0
-chatpanel.member_left_folder_at_time={1} {0} \u3055\u3093\u304C\u30D5\u30A9\u30EB\u30C0\u3092\u9000\u907F
+chat_panel.cannot_deliver='{0}' \u3055\u3093\u3068\u63A5\u7D9A\u3055\u308C\u3066\u3044\u306A\u3044\u305F\u3081\u3001\u30E1\u30C3\u30BB\u30FC\u30B8\u9001\u9054\u4E0D\u53EF
+chat_panel.chat_with=\u30C1\u30E3\u30C3\u30C8\u76F8\u624B\:
+chat_panel.member_connected_at_time={1} {0} \u3055\u3093\u306F\u63A5\u7D9A
+chat_panel.member_disconnected_at_time={1} {0} \u3055\u3093\u306F\u5207\u65AD
+chat_panel.member_joined_folder_at_time={1} {0} \u3055\u3093\u304C\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0
+chat_panel.member_left_folder_at_time={1} {0} \u3055\u3093\u304C\u30D5\u30A9\u30EB\u30C0\u3092\u9000\u907F
 
 clear_completed_uploads.description=\u6700\u8FD1\u5B8C\u4E86\u3057\u305F\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u306E\u30EA\u30B9\u30C8\u3092\u6D88\u53BB(Alt-3)
 clear_completed_uploads.key=C
 clear_completed_uploads.name=\u6D88\u53BB(C)
 
-clearcompleteddownloads.description=\u6700\u8FD1\u5B8C\u4E86\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u306E\u30EA\u30B9\u30C8\u3092\u6D88\u53BB(Alt-3)
-clearcompleteddownloads.key=C
-clearcompleteddownloads.name=\u5B8C\u4E86\u306E\u6D88\u53BB(C)
+clear_completed_downloads.description=\u6700\u8FD1\u5B8C\u4E86\u3057\u305F\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u306E\u30EA\u30B9\u30C8\u3092\u6D88\u53BB(Alt-3)
+clear_completed_downloads.key=C
+clear_completed_downloads.name=\u5B8C\u4E86\u306E\u6D88\u53BB(C)
 
 connect.description=PowerFolder \u30E6\u30FC\u30B6\u30FC\u3078\u306E\u624B\u52D5\u63A5\u7D9A
 connect.dialog.text=\u63A5\u7D9A\u3057\u305F\u3044\u30E6\u30FC\u30B6\u30FC\u306E\u30DB\u30B9\u30C8\u540D\u307E\u305F\u306F IP \u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n\nPowerFolder \u306F\u81EA\u52D5\u7684\u306B\u77ED\u6642\u9593\u3067\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u3078\u63A5\u7D9A\u3057\u307E\u3059\u304C\u3001\n\u30E6\u30FC\u30B6\u30FC\u306B\u624B\u52D5\u3067\u63A5\u7D9A\u3057\u305F\u3044\u5834\u5408\u306F\u3053\u306E\u30AA\u30D7\u30B7\u30E7\u30F3\u3092\u4F7F\u7528\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n
@@ -116,11 +116,11 @@ connect.dialog.title=PowerFolder \u30E6\u30FC\u30B6\u30FC\u3078\u306E\u624B\u52D
 connect.key=C
 connect.name=\u63A5\u7D9A(C)
 
-console.updatecheck.new_developmentversion=------------ \u65B0\u958B\u767A\u7248\u306E\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9 ------------
+console.update_check.new_development_version=------------ \u65B0\u958B\u767A\u7248\u306E\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9 ------------
 
-createshortcut.description=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u4E0A\u306B\u3053\u306E PowerFolder \u3078\u306E\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u3092\u4F5C\u6210
-createshortcut.key=C
-createshortcut.name=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u306B\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u3092\u4F5C\u6210(C)
+create_shortcut.description=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u4E0A\u306B\u3053\u306E PowerFolder \u3078\u306E\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u3092\u4F5C\u6210
+create_shortcut.key=C
+create_shortcut.name=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u306B\u30B7\u30E7\u30FC\u30C8\u30AB\u30C3\u30C8\u3092\u4F5C\u6210(C)
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=yyyy/MM/dd HH\:mm
@@ -480,7 +480,7 @@ folderrepository.preview_folder.title=\u30D7\u30EC\u30D3\u30E5\u30FC\u30D5\u30A9
 folderrepository.warnonclose.text=\u4EE5\u4E0B\u306E\u30D5\u30A9\u30EB\u30C0\u306F\u307E\u3060\u540C\u671F\u3055\u308C\u3066\u3044\u307E\u305B\u3093\:\n\n\n\n{0}\n\n\n\u7D42\u4E86\u3092\u7D9A\u884C\u3057\u307E\u3059\u304B\uFF1F
 folderrepository.warnonclose.title=\u7D42\u4E86\u7D9A\u884C\uFF1F
 
-freelimitdialog.buypro=PowerFolder Pro \u306E\u8CFC\u5165
+freelimitdialog.buy_pro=PowerFolder Pro \u306E\u8CFC\u5165
 freelimitdialog.buyrecommendation=Pro \u7248\u306B\u30A2\u30C3\u30D7\u30B0\u30EC\u30FC\u30C9\u3059\u308B\u304B\u4F7F\u7528\u91CF\u3092\u6E1B\u3089\u3059\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 freelimitdialog.buyrecommendation2=\u3044\u305A\u308C\u304B\u9078\u629E\u3055\u308C\u308B\u307E\u3067\u3001PowerFolder \u306F\u7121\u52B9\u72B6\u614B\u306B\u306A\u3063\u3066\u3044\u307E\u3059\u3002
 freelimitdialog.buyrecommendation3=PowerFolder Pro \u3092\u8CFC\u5165\u3057\u3066\u79C1\u305F\u3061\u3092\u30B5\u30DD\u30FC\u30C8\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
