--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -84,9 +84,9 @@ addressEditor.title=IP-Reeks
 ##black_list.key=I
 ##black_list.name=Add to ignore patterns
 
-buypro.description=Upgrade nu naar PowerFolder Pro
-buypro.key=P
-buypro.name=Koop Pro
+buy_pro.description=Upgrade nu naar PowerFolder Pro
+buy_pro.key=P
+buy_pro.name=Koop Pro
 
 ##change.friend.personal.message.text=You may include a personal message for {0}
 ##change.friend.personal.message.title=Add friend message
@@ -95,20 +95,20 @@ buypro.name=Koop Pro
 ##chat.notification.message=You have received a chat message.
 ##chat.notification.title=Chat Message Received
 
-chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
-chatpanel.chat_with=Chat met
-chatpanel.member_connected_at_time={0} verbonden om {1}
-chatpanel.member_disconnected_at_time={0} verbrak de verbinding om {1}
-chatpanel.member_joined_folder_at_time={0} werd lid van de Folder om {1}
-chatpanel.member_left_folder_at_time={0} verliet de Folder om {1}
+chat_panel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
+chat_panel.chat_with=Chat met
+chat_panel.member_connected_at_time={0} verbonden om {1}
+chat_panel.member_disconnected_at_time={0} verbrak de verbinding om {1}
+chat_panel.member_joined_folder_at_time={0} werd lid van de Folder om {1}
+chat_panel.member_left_folder_at_time={0} verliet de Folder om {1}
 
 ##clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
 ##clear_completed_uploads.key=c
 ##clear_completed_uploads.name=Cleanup
 
-##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
-clearcompleteddownloads.key=R
-clearcompleteddownloads.name=Ruim op
+##clear_completed_downloads.description=Clears the list of the recently completed downloads (Alt-3)
+clear_completed_downloads.key=R
+clear_completed_downloads.name=Ruim op
 
 connect.description=Maak verbinding met een PowerFolder gebruiker
 connect.dialog.text=Vul de hostname of ip adres in van de gebruiker waarmee u wilt verbinden.\n\nPowerFolder zal automatisch met het netwerk verbinden na een korte tijd,\ngebruik deze optie om met een gebruiker te verbinden.\n 
@@ -116,11 +116,11 @@ connect.dialog.title=Maak verbinding met een PowerFolder gebruiker
 connect.key=V
 connect.name=Verbinden
 
-console.updatecheck.new_developmentversion=------------ Nieuwe ontwikkel versie gedownload ------------
+console.update_check.new_development_version=------------ Nieuwe ontwikkel versie gedownload ------------
 
-##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
-createshortcut.key=S
-createshortcut.name=Maak een snelkoppeling
+##create_shortcut.description=Creates a shortcut to this PowerFolder on your desktop
+create_shortcut.key=S
+create_shortcut.name=Maak een snelkoppeling
 
 ##date_format.detailed_time=[HH\:mm\:ss\:SSS]
 ##date_format.file_date=MM/dd/yyyy HH\:mm
@@ -482,7 +482,7 @@ folderpanel.settingstab.userecyclebin=Gebruikt prullenbak
 folderrepository.warnonclose.text=Deze folders zijn nog niet gesynchroniseerd\:\n\n\n\n{0}\n\n\nDoorgaan met sluiten?
 folderrepository.warnonclose.title=Doorgaan met sluiten?
 
-freelimitdialog.buypro=Koop PowerFolder Pro
+freelimitdialog.buy_pro=Koop PowerFolder Pro
 freelimitdialog.buyrecommendation=Het is It is vereist dat u de Pro versie koopt of uw gebruikt verminderd.
 freelimitdialog.buyrecommendation2=PowerFolder is momenteel uitgeschakeld totdat u actie onderneemt.
 freelimitdialog.buyrecommendation3=Ondersteun ons door PowerFolder Pro aan te schaffen\!
