--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -84,9 +84,9 @@ apps.dir.thunderbird=Thunderbird
 ##black_list.key=I
 ##black_list.name=Add to ignore patterns
 
-buypro.description=Uaktualnij do PowerFolder Pro
-buypro.key=B
-buypro.name=Kup wersj\u0119 Pro
+buy_pro.description=Uaktualnij do PowerFolder Pro
+buy_pro.key=B
+buy_pro.name=Kup wersj\u0119 Pro
 
 ##change.friend.personal.message.text=You may include a personal message for {0}
 ##change.friend.personal.message.title=Add friend message
@@ -95,20 +95,20 @@ buypro.name=Kup wersj\u0119 Pro
 ##chat.notification.message=You have received a chat message.
 ##chat.notification.title=Chat Message Received
 
-chatpanel.cannot_deliver=wiadomo\u015b\u0107 nie mo\u017ce zosta\u0107 dostarczona poniewa\u017c '{0}' jest roz\u0142\u0105czony
-chatpanel.chat_with=Rozmowa z
-chatpanel.member_connected_at_time={0} po\u0142\u0105czony, {1}
-chatpanel.member_disconnected_at_time={0} roz\u0142\u0105czony, {1}
-chatpanel.member_joined_folder_at_time={0} przy\u0142\u0105czono si\u0119 do folderu, {1}
-chatpanel.member_left_folder_at_time={0} opuszczono folder, {1}
+chat_panel.cannot_deliver=wiadomo\u015b\u0107 nie mo\u017ce zosta\u0107 dostarczona poniewa\u017c '{0}' jest roz\u0142\u0105czony
+chat_panel.chat_with=Rozmowa z
+chat_panel.member_connected_at_time={0} po\u0142\u0105czony, {1}
+chat_panel.member_disconnected_at_time={0} roz\u0142\u0105czony, {1}
+chat_panel.member_joined_folder_at_time={0} przy\u0142\u0105czono si\u0119 do folderu, {1}
+chat_panel.member_left_folder_at_time={0} opuszczono folder, {1}
 
 ##clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
 ##clear_completed_uploads.key=c
 ##clear_completed_uploads.name=Cleanup
 
-clearcompleteddownloads.description=Czy\u015bci list\u0119 niedawno zako\u0144czonych pobiera\u0144
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=Czy\u015b\u0107
+clear_completed_downloads.description=Czy\u015bci list\u0119 niedawno zako\u0144czonych pobiera\u0144
+clear_completed_downloads.key=c
+clear_completed_downloads.name=Czy\u015b\u0107
 
 connect.description=R\u0119czne po\u0142\u0105czenie z U\u017cytkownikiem PowerFolder
 connect.dialog.text=Podaj nazw\u0119 hosta lub adres IP U\u017cytkownika, z kt\u00f3rym chcesz si\u0119 po\u0142\u0105czy\u0107.\n\nPowerFolder automatycznie \u0142\u0105czy si\u0119 z sieci\u0105 po kr\u00f3tkim czasie,\nu\u017cyj tej opcji, je\u015bli chcesz si\u0119 r\u0119cznie po\u0142\u0105czy\u0107 z U\u017cytkownikiem.\n
@@ -116,11 +116,11 @@ connect.dialog.title=R\u0119czne po\u0142\u0105czenie z U\u017cytkownikiem Power
 connect.key=c
 connect.name=Po\u0142\u0105cz
 
-console.updatecheck.new_developmentversion=------------ Zako\u0144czono pobieranie nowej wersji rozwojowej ------------
+console.update_check.new_development_version=------------ Zako\u0144czono pobieranie nowej wersji rozwojowej ------------
 
-##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
-createshortcut.key=D
-createshortcut.name=Stw\u00f3rz skr\u00f3t na pulpicie
+##create_shortcut.description=Creates a shortcut to this PowerFolder on your desktop
+create_shortcut.key=D
+create_shortcut.name=Stw\u00f3rz skr\u00f3t na pulpicie
 
 ##date_format.detailed_time=[HH\:mm\:ss\:SSS]
 ##date_format.file_date=MM/dd/yyyy HH\:mm
@@ -482,7 +482,7 @@ folderpanel.settingstab.userecyclebin=U\u017cyj kosza
 folderrepository.warnonclose.text=Te foldery nie zosta\u0142y jeszcze zsynchronizowane\:\n\n\n\n{0}\n\n\nCzy na pewno chcesz wyj\u015b\u0107?
 folderrepository.warnonclose.title=Czy na pewno chcesz wyj\u015b\u0107?
 
-freelimitdialog.buypro=Kup PowerFolder Pro
+freelimitdialog.buy_pro=Kup PowerFolder Pro
 freelimitdialog.buyrecommendation=Uaktualnij PowerFolder do wersji Pro lub zmiejsz u\u017cycie.
 freelimitdialog.buyrecommendation2=PowerFolder jest w tej chwili nie aktywny, musisz podj\u0105\u0107 dzia\u0142anie.
 freelimitdialog.buyrecommendation3=Wspom\u00f3\u017c nas poprzez zakupienie PowerFolder Pro\!
