--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -80,9 +80,9 @@ apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
 apps.dir.thunderbird=Thunderbird
 
-buypro.description=Atualize j\u00e1 para o PowerFolder Pro
-buypro.key=C
-buypro.name=Comprar Pro
+buy_pro.description=Atualize j\u00e1 para o PowerFolder Pro
+buy_pro.key=C
+buy_pro.name=Comprar Pro
 
 change.friend.personal.message.text=Voc\u00ea pode incluir uma mensagem pessoal para {0}
 change.friend.personal.message.title=Adicionar mensagem para amigo
@@ -91,16 +91,16 @@ chat.notification.option1=Responder
 chat.notification.option2=Fechar
 chat.notification.subtitle=<html><b>PowerFolder</b><br>Nova mensagem de bate-papo\:</html>
 
-chatpanel.cannot_deliver=mensagem nao p\u00f4de ser entregue porque '{0}' n\u00e3o est\u00e1 conectado(a)
-chatpanel.chat_with=Bata-papo com
-chatpanel.member_connected_at_time={0} conectou-se as {1}
-chatpanel.member_disconnected_at_time={0} desconectou-se as {1}
-chatpanel.member_joined_folder_at_time={0} entrou na sala as {1}
-chatpanel.member_left_folder_at_time={0} saiu da sala as {1}
+chat_panel.cannot_deliver=mensagem nao p\u00f4de ser entregue porque '{0}' n\u00e3o est\u00e1 conectado(a)
+chat_panel.chat_with=Bata-papo com
+chat_panel.member_connected_at_time={0} conectou-se as {1}
+chat_panel.member_disconnected_at_time={0} desconectou-se as {1}
+chat_panel.member_joined_folder_at_time={0} entrou na sala as {1}
+chat_panel.member_left_folder_at_time={0} saiu da sala as {1}
 
-clearcompleteddownloads.description=Limpa a lista de arquivos baixados recentemente (Alt-3)
-clearcompleteddownloads.key=l
-clearcompleteddownloads.name=Limpar
+clear_completed_downloads.description=Limpa a lista de arquivos baixados recentemente (Alt-3)
+clear_completed_downloads.key=l
+clear_completed_downloads.name=Limpar
 
 clearrecentdownloads.description=Limpa a lista de problemas recentes
 clearrecentdownloads.key=l
@@ -112,11 +112,11 @@ connect.dialog.title=Conectar-se manualmente a um usu\u00e1rio do PowerFolder
 connect.key=c
 connect.name=Conectar
 
-console.updatecheck.new_developmentversion=------------ Nova vers\u00e3o de desenvolvimento baixada ------------
+console.update_check.new_development_version=------------ Nova vers\u00e3o de desenvolvimento baixada ------------
 
-createshortcut.description=Cria um atalho para esta pasta PowerFolder na sua \u00e1rea de trabalho (desktop)
-createshortcut.key=A
-createshortcut.name=Criar atalho na \u00c1rea de Trabalho
+create_shortcut.description=Cria um atalho para esta pasta PowerFolder na sua \u00e1rea de trabalho (desktop)
+create_shortcut.key=A
+create_shortcut.name=Criar atalho na \u00c1rea de Trabalho
 
 delete_confimation.busy.description=Removendo arquivo(s)
 delete_confimation.busy.title=Apagando arquivo(s)
@@ -418,7 +418,7 @@ folderrepository.preview_folder.title=Pr\u00e9-visualizar Pasta
 folderrepository.warnonclose.text=Estas pastas n\u00e3o est\u00e3o sincronizadas ainda\:\n\n\n\n{0}\n\n\nContinuar sa\u00edda?
 folderrepository.warnonclose.title=Continuar Sa\u00edda?
 
-freelimitdialog.buypro=Comprar PowerFolder Pro
+freelimitdialog.buy_pro=Comprar PowerFolder Pro
 freelimitdialog.buyrecommendation=Voc\u00ea precisa atualizar para a vers\u00e3o Pro ou reduzir utiliza\u00e7\u00e3o.
 freelimitdialog.buyrecommendation2=PowerFolder est\u00e1 desativado at\u00e9 que voc\u00ea escolha uma a\u00e7\u00e3o.
 freelimitdialog.buyrecommendation3=Mostre seu suporte atualizando para o PowerFolder Pro\!
