--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -84,9 +84,9 @@ black_list.description=\u6dfb\u52a0\u6587\u4ef6\u5b9a\u4e49\u5230\u5ffd\u7565\u6
 black_list.key=I
 black_list.name=\u6dfb\u52a0\u5ffd\u7565\u6837\u5f0f
 
-buypro.description=\u7acb\u5373\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248
-buypro.key=B
-buypro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
+buy_pro.description=\u7acb\u5373\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248
+buy_pro.key=B
+buy_pro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
 
 change.friend.personal.message.text=\u4f60\u53ef\u80fd\u5305\u542b\u4e86\u4e00\u6761\u7ed9 {0} \u7684\u4e2a\u4eba\u4fe1\u606f
 change.friend.personal.message.title=\u6dfb\u52a0\u597d\u53cb\u4fe1\u606f
@@ -95,20 +95,20 @@ chat.notification.member_message=\u4f60\u6536\u5230\u4e00\u6761\u6765\u81ea {0} 
 chat.notification.message=\u4f60\u6536\u5230\u4e00\u6761\u804a\u5929\u4fe1\u606f
 chat.notification.title=\u6536\u5230\u804a\u5929\u4fe1\u606f
 
-chatpanel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
-chatpanel.chat_with=\u804a\u5929
-chatpanel.member_connected_at_time={0} \u4e8e {1} \u8fde\u63a5
-chatpanel.member_disconnected_at_time={0} \u4e8e {1} \u65ad\u5f00\u8fde\u63a5
-chatpanel.member_joined_folder_at_time={0} \u4e8e {1} \u52a0\u5165\u6587\u4ef6\u5939
-chatpanel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u5939
+chat_panel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
+chat_panel.chat_with=\u804a\u5929
+chat_panel.member_connected_at_time={0} \u4e8e {1} \u8fde\u63a5
+chat_panel.member_disconnected_at_time={0} \u4e8e {1} \u65ad\u5f00\u8fde\u63a5
+chat_panel.member_joined_folder_at_time={0} \u4e8e {1} \u52a0\u5165\u6587\u4ef6\u5939
+chat_panel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u5939
 
 clear_completed_uploads.description=\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0a\u4f20\u5217\u8868 (Alt-3)
 clear_completed_uploads.key=c
 clear_completed_uploads.name=\u6d88\u9664
 
-clearcompleteddownloads.description=\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d\u5217\u8868 (Alt-3)
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=\u6e05\u9664
+clear_completed_downloads.description=\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d\u5217\u8868 (Alt-3)
+clear_completed_downloads.key=c
+clear_completed_downloads.name=\u6e05\u9664
 
 connect.description=\u624b\u52a8\u8fde\u63a5\u5230 PowerFolder \u7528\u6237
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u4e3b\u673a\u540d\u6216IP\n\nPowerFolder\u5c06\u5728\u7a0d\u540e\u81ea\u52a8\u8fde\u63a5\uff0c\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n
@@ -116,11 +116,11 @@ connect.dialog.title=\u624b\u52a8\u8fde\u63a5\u5230 PowerFolder \u7528\u6237
 connect.key=c
 connect.name=\u8fde\u63a5
 
-console.updatecheck.new_developmentversion=------------ \u4e0b\u8f7d\u65b0\u5f00\u53d1\u7248\u672c ------------
+console.update_check.new_development_version=------------ \u4e0b\u8f7d\u65b0\u5f00\u53d1\u7248\u672c ------------
 
-createshortcut.description=\u5728\u684c\u9762\u521b\u5efaPowerFolder\u7684\u5feb\u6377\u65b9\u5f0f
-createshortcut.key=C
-createshortcut.name=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
+create_shortcut.description=\u5728\u684c\u9762\u521b\u5efaPowerFolder\u7684\u5feb\u6377\u65b9\u5f0f
+create_shortcut.key=C
+create_shortcut.name=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/dd/yyyy HH\:mm
@@ -481,7 +481,7 @@ folderrepository.preview_folder.title=\u9884\u89c8\u6587\u4ef6\u5939
 folderrepository.warnonclose.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u672a\u540c\u6b65\uff1a\n\n\n\n{0}\n\n\n\u7ee7\u7eed\u9000\u51fa\uff1f
 folderrepository.warnonclose.title=\u7ee7\u7eed\u9000\u51fa\uff1f
 
-freelimitdialog.buypro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
+freelimitdialog.buy_pro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
 freelimitdialog.buyrecommendation=\u4f60\u9700\u8981\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u6216\u51cf\u5c11\u4f7f\u7528\u7387\u3002
 freelimitdialog.buyrecommendation2=PowerFolder\u76ee\u524d\u88ab\u7981\u7528\uff0c\u8bf7\u4f60\u8d76\u5feb\u884c\u52a8\u5427\u3002
 freelimitdialog.buyrecommendation3=\u901a\u8fc7\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248\u652f\u6301\u6211\u4eec\!
