--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -84,9 +84,9 @@ addressEditor.title=\u0645\u062c\u0627\u0644-\u0627\u0644\u0627\u064a \u0628\u06
 ##black_list.key=I
 ##black_list.name=Add to ignore patterns
 
-buypro.description=\u062a\u0631\u0642\u064a\u0629 \u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c \u0625\u0644\u0649 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0627\u0644\u0622\u0646
-buypro.key=\u0644\u0627
-buypro.name=\u0634\u0631\u0627\u0621 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u0631\u0627\u0641\u064a\u0629
+buy_pro.description=\u062a\u0631\u0642\u064a\u0629 \u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c \u0625\u0644\u0649 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0627\u0644\u0622\u0646
+buy_pro.key=\u0644\u0627
+buy_pro.name=\u0634\u0631\u0627\u0621 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0625\u062d\u062a\u0631\u0627\u0641\u064a\u0629
 
 ##change.friend.personal.message.text=You may include a personal message for {0}
 ##change.friend.personal.message.title=Add friend message
@@ -95,20 +95,20 @@ buypro.name=\u0634\u0631\u0627\u0621 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627
 ##chat.notification.message=You have received a chat message.
 ##chat.notification.title=Chat Message Received
 
-chatpanel.cannot_deliver=\u0644\u0645 \u064a\u062a\u0645 \u062a\u0633\u0644\u0651\u064a\u0645 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0628\u0633\u0628\u0628 '{0}' \u063a\u064a\u0631 \u0645\u062a\u0635\u0644
-chatpanel.chat_with=\u062a\u062d\u0627\u062f\u062b \u0645\u0639
-chatpanel.member_connected_at_time={0} \u0645\u062a\u0635\u0644 \u0639\u0646\u062f {1}
-chatpanel.member_disconnected_at_time={0} \u063a\u064a\u0631 \u0645\u062a\u0635\u0644 \u0639\u0646\u062f {1}
-chatpanel.member_joined_folder_at_time={0} \u0627\u0631\u062a\u0628\u0637 \u0628\u0627\u0644\u0645\u062c\u0644\u062f \u0639\u0646\u062f {1}
-chatpanel.member_left_folder_at_time={0} \u063a\u0627\u062f\u0631 \u0627\u0644\u0645\u062c\u0644\u062f \u0639\u0646\u062f {1}
+chat_panel.cannot_deliver=\u0644\u0645 \u064a\u062a\u0645 \u062a\u0633\u0644\u0651\u064a\u0645 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u0628\u0633\u0628\u0628 '{0}' \u063a\u064a\u0631 \u0645\u062a\u0635\u0644
+chat_panel.chat_with=\u062a\u062d\u0627\u062f\u062b \u0645\u0639
+chat_panel.member_connected_at_time={0} \u0645\u062a\u0635\u0644 \u0639\u0646\u062f {1}
+chat_panel.member_disconnected_at_time={0} \u063a\u064a\u0631 \u0645\u062a\u0635\u0644 \u0639\u0646\u062f {1}
+chat_panel.member_joined_folder_at_time={0} \u0627\u0631\u062a\u0628\u0637 \u0628\u0627\u0644\u0645\u062c\u0644\u062f \u0639\u0646\u062f {1}
+chat_panel.member_left_folder_at_time={0} \u063a\u0627\u062f\u0631 \u0627\u0644\u0645\u062c\u0644\u062f \u0639\u0646\u062f {1}
 
 ##clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
 ##clear_completed_uploads.key=c
 ##clear_completed_uploads.name=Cleanup
 
-##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
-clearcompleteddownloads.key=\u0624
-clearcompleteddownloads.name=\u062a\u0646\u0638\u064a\u0641
+##clear_completed_downloads.description=Clears the list of the recently completed downloads (Alt-3)
+clear_completed_downloads.key=\u0624
+clear_completed_downloads.name=\u062a\u0646\u0638\u064a\u0641
 
 connect.description=\u0627\u062a\u0635\u0627\u0644 \u0628\u0645\u0633\u062a\u062e\u062f\u0645  PowerFolder \u0628\u0634\u0643\u0644 \u064a\u062f\u0648\u064a
 connect.dialog.text=\u0627\u0644\u0631\u062c\u0627\u0621 \u0625\u062f\u062e\u0627\u0644 \u0623\u0633\u0645 \u0627\u0644\u0645\u0633\u062a\u0636\u064a\u0641 \u0623\u0648 \u0627\u064a \u0628\u064a \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0630\u064a \u062a\u0631\u064a\u062f \u0627\u0644\u0625\u062a\u0635\u0627\u0644 \u0628\u0647 connect.\n\n\u064a\u062a\u0635\u0644 PowerFolder \u0628\u0634\u0643\u0644 \u0623\u0648\u062a\u0648\u0645\u0627\u062a\u064a\u0643\u064a \u0628\u0627\u0644\u0634\u0628\u0643\u0629 \u0628\u0639\u062f \u0648\u0642\u062a \u0642\u0635\u064a\u0631 ,\n\u0627\u0633\u062a\u062e\u062f\u0645 \u0647\u0630\u0627 \u0627\u0644\u062e\u064a\u0627\u0631 \u0625\u0630\u0627 \u0627\u0631\u062f\u062a \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645 \u0628\u0634\u0643\u0644 \u064a\u062f\u0648\u064a.\n
@@ -116,11 +116,11 @@ connect.dialog.title=\u0627\u062a\u0635\u0627\u0644 \u064a\u062f\u0648\u064a \u0
 connect.key=\u0624
 connect.name=\u0625\u062a\u0635\u0627\u0644
 
-console.updatecheck.new_developmentversion=------------ \u0646\u0633\u062e\u0629 \u0645\u0637\u0648\u0631\u0629 \u062c\u062f\u064a\u062f\u0629 \u062a\u0645 \u062a\u062d\u0645\u064a\u0644\u0647\u0627------------
+console.update_check.new_development_version=------------ \u0646\u0633\u062e\u0629 \u0645\u0637\u0648\u0631\u0629 \u062c\u062f\u064a\u062f\u0629 \u062a\u0645 \u062a\u062d\u0645\u064a\u0644\u0647\u0627------------
 
-##createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
-createshortcut.key=\u064a
-createshortcut.name=\u0625\u0636\u0627\u0641\u0629 \u0623\u062e\u062a\u0635\u0627\u0631 \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
+##create_shortcut.description=Creates a shortcut to this PowerFolder on your desktop
+create_shortcut.key=\u064a
+create_shortcut.name=\u0625\u0636\u0627\u0641\u0629 \u0623\u062e\u062a\u0635\u0627\u0631 \u0639\u0644\u0649 \u0633\u0637\u062d \u0627\u0644\u0645\u0643\u062a\u0628
 
 ##date_format.detailed_time=[HH\:mm\:ss\:SSS]
 ##date_format.file_date=MM/dd/yyyy HH\:mm
@@ -482,7 +482,7 @@ folderpanel.settingstab.userecyclebin=\u0623\u0633\u062a\u0639\u0645\u0644 \u063
 folderrepository.warnonclose.text=\u0644\u0645 \u064a\u062a\u0645 \u0645\u0632\u0627\u0645\u0646\u0629 \u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f \u0628\u0639\u062f \:\n\n\n\n{0}\n\n\n\u0625\u0633\u062a\u0645\u0631\u0627\u0631  \u062e\u0631\u0648\u062c?
 folderrepository.warnonclose.title=\u062e\u0631\u0648\u062c \u0625\u0633\u062a\u0645\u0631\u0627\u0631?
 
-freelimitdialog.buypro=\u0627\u0634\u062a\u0631\u064a \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0645\u0646 PowerFolder
+freelimitdialog.buy_pro=\u0627\u0634\u062a\u0631\u064a \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0645\u0646 PowerFolder
 freelimitdialog.buyrecommendation=\u064a\u062c\u0628 \u0623\u0646 \u062a\u062d\u062f\u062b \u0625\u0644\u0649 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0623\u0648 \u062a\u0646\u0642\u0635 \u0645\u0646 \u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u0633\u062a\u062e\u062f\u0645
 freelimitdialog.buyrecommendation2=PowerFolder \u0627\u0644\u0627\u0646 \u0645\u062a\u0648\u0642\u0641 \u062d\u062a\u0649 \u062a\u0642\u0648\u0645 \u0628\u0627\u064a \u062d\u0631\u0643\u0629 .
 freelimitdialog.buyrecommendation3=\u0642\u0645 \u0628\u062f\u0639\u0645\u0646\u0627 \u0639\u0628\u0631 \u0634\u0631\u0627\u0621 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u0627\u062d\u062a\u0631\u0627\u0641\u064a\u0629 \u0645\u0646 PowerFolder \!
