--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -96,9 +96,9 @@ black_list.description=Adds a file definition to the ignore patterns
 black_list.key=I
 black_list.name=Add to ignore patterns
 
-buypro.description=Upgrade to PowerFolder Pro now
-buypro.key=B
-buypro.name=Buy Pro
+buy_pro.description=Upgrade to PowerFolder Pro now
+buy_pro.key=B
+buy_pro.name=Buy Pro
 
 change.friend.personal.message.text=You may include a personal message for {0}
 change.friend.personal.message.title=Add friend message
@@ -107,16 +107,16 @@ chat.notification.title=Chat Message Received
 chat.notification.message=You have received a chat message.
 chat.notification.member_message=You have received a chat message from {0}.
 
-chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
-chatpanel.chat_with=Chat with
-chatpanel.member_connected_at_time={0} connected at {1}
-chatpanel.member_disconnected_at_time={0} disconnected at {1}
-chatpanel.member_joined_folder_at_time={0} joined folder at {1}
-chatpanel.member_left_folder_at_time={0} left folder at {1}
+chat_panel.cannot_deliver=message can not be delivered because '{0}' is not connected
+chat_panel.chat_with=Chat with
+chat_panel.member_connected_at_time={0} connected at {1}
+chat_panel.member_disconnected_at_time={0} disconnected at {1}
+chat_panel.member_joined_folder_at_time={0} joined folder at {1}
+chat_panel.member_left_folder_at_time={0} left folder at {1}
 
-clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
-clearcompleteddownloads.key=c
-clearcompleteddownloads.name=Cleanup
+clear_completed_downloads.description=Clears the list of the recently completed downloads (Alt-3)
+clear_completed_downloads.key=c
+clear_completed_downloads.name=Cleanup
 
 clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
 clear_completed_uploads.key=c
@@ -128,11 +128,11 @@ connect.dialog.title=Manually connect to a PowerFolder user
 connect.key=c
 connect.name=Connect
 
-console.updatecheck.new_developmentversion=------------ New development version downloaded ------------
+console.update_check.new_development_version=------------ New development version downloaded ------------
 
-createshortcut.description=Creates a shortcut to this PowerFolder on your desktop
-createshortcut.key=D
-createshortcut.name=Create Desktop Shortcut
+create_shortcut.description=Creates a shortcut to this PowerFolder on your desktop
+create_shortcut.key=D
+create_shortcut.name=Create Desktop Shortcut
 
 date_format.time_only_date=[HH:mm:ss]
 date_format.detailed_time=[HH:mm:ss:SSS]
@@ -490,7 +490,7 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 
 
-freelimitdialog.buypro=Buy PowerFolder Pro
+freelimitdialog.buy_pro=Buy PowerFolder Pro
 freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
 freelimitdialog.buyrecommendation3=Support us by getting PowerFolder Pro\!
